syntax = "proto3";

import "google/protobuf/empty.proto";

option csharp_namespace = "Profile.Avatar.Gen";

service ProfileAvatars{
	rpc Create(CreateAvatarRequest) returns (google.protobuf.Empty);
	rpc Get(GetAvatarRequest) returns (GetAvatarResponse);
	rpc GetAvailable(google.protobuf.Empty) returns (GetAvatarsResponse);
	rpc Update(UpdateAvatarRequest) returns (google.protobuf.Empty);
	rpc Delete(DeleteAvatarRequest) returns (google.protobuf.Empty);
}

message CreateAvatarRequest {
	string s3_path = 1;
	string name = 2;
	string description = 3;
	int32 necessary_mmr = 4;
	int32 necessary_games = 5;
	int32 necessary_wins = 6;
	bool available = 7;
}

message GetAvatarRequest {
	int32 id = 1;
}

message GetAvatarResponse {
	int32 id = 1;
	string s3_path = 2;
	string name = 3;
	string description = 4;
	int32 necessary_mmr = 5;
	int32 necessary_games = 6;
	int32 necessary_wins = 7;
	bool available = 8;
}

message GetAvatarsResponse {
    repeated GetAvatarResponse avatars = 1;
}

message UpdateAvatarRequest {
	int32 id = 1;
	string s3_path = 2;
	string name = 3;
	string description = 4;
	int32 necessary_mmr = 5;
	int32 necessary_games = 6;
	int32 necessary_wins = 7;
	bool available = 8;
}

message DeleteAvatarRequest{
	int32 id = 1;
}